tests/compile-fail/fn_too_many_args.stderr
error: Invalid plugin function signature

         = help: Function should take a single argument of the type `&mut bevy::app::App`

 --> tests/compile-fail/fn_too_many_args.rs:6:1
  |
6 | fn multiple_args(_: &mut App, _: usize) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `bevy::prelude::*`
 --> tests/compile-fail/fn_too_many_args.rs:3:5
  |
3 | use bevy::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
